--- a/.github/workflows/build-push-deply.yml
+++ b/.github/workflows/build-push-deply.yml
@@ -104,9 +104,9 @@ jobs:
           ENV_AIRFLOW_USER:      ${{ secrets.AIRFLOW_USER }}
           ENV_AIRFLOW_PASSWORD:  ${{ secrets.AIRFLOW_PASSWORD }}
           ENV_GCP_PROJECT_ID:    ${{ secrets.GCP_PROJECT_ID }}
-          ENV_GCS_BUCKET:        ${{ secrets.GCS_BUCKET }}   # 或改用 vars
-          ENV_BQ_DATASET:        ${{ secrets.BQ_DATASET }}   # 或改用 vars
-          ENV_BQ_TABLE:          ${{ secrets.BQ_TABLE }}     # 或改用 vars
+          ENV_GCS_BUCKET:        ${{ secrets.GCS_BUCKET }}
+          ENV_BQ_DATASET:        ${{ secrets.BQ_DATASET }}
+          ENV_BQ_TABLE:          ${{ secrets.BQ_TABLE }}
           ENV_AIRFLOW_IMAGE:     ${{ needs.build-push.outputs.image_uri }}
         run: |
           cat > .env <<EOF
