--- a/.github/workflows/build-push-deply.yml
+++ b/.github/workflows/build-push-deply.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: {}
 
 env:
-  REGION: ${{ secrets.GAR_LOCATION }}
+  REGION: ${{ secrets.REGION }}
   GAR_REPO: ${{ secrets.GAR_REPO }}
   IMAGE_NAME: ${{ secrets.IMAGE_NAME }}
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
