--- a/.github/workflows/build-push-deply.yml
+++ b/.github/workflows/build-push-deply.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Add VM to known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -T 10 "${VM_HOST}" >> ~/.ssh/known_hosts
+          ssh-keyscan -T 30 -H "${VM_HOST}" >> ~/.ssh/known_hosts 2>/dev/null || echo "ssh-keyscan failed, continue"
 
       - name: Write SSH key (id_deploy)
         run: |
@@ -93,7 +93,7 @@ jobs:
 
       - name: Test SSH connectivity
         run: |
-          ssh -i ~/.ssh/id_deploy -o StrictHostKeyChecking=yes ${VM_USER}@${VM_HOST} "whoami && hostname && echo OK"
+          ssh -i ~/.ssh/id_deploy -o StrictHostKeyChecking=no ${VM_USER}@${VM_HOST} "whoami && hostname && echo OK"
 
       - name: Generate .env locally
         env:
@@ -106,8 +106,12 @@ jobs:
           ENV_GCS_BUCKET:        ${{ secrets.GCS_BUCKET }}
           ENV_BQ_DATASET:        ${{ secrets.BQ_DATASET }}
           ENV_BQ_TABLE:          ${{ secrets.BQ_TABLE }}
-          ENV_AIRFLOW_IMAGE:     ${{ needs.build-push.outputs.image_uri }}
+          ENV_REGION:            ${{ secrets.REGION }}        # 例：us-west1
+          ENV_GAR_REPO:          ${{ secrets.GAR_REPO }}      # 例：ny-taxi-repo
+          ENV_IMAGE_NAME:        ${{ secrets.IMAGE_NAME }}    # 例：airflow
         run: |
+          AIRFLOW_IMAGE="${ENV_REGION}-docker.pkg.dev/${ENV_GCP_PROJECT_ID}/${ENV_GAR_REPO}/${ENV_IMAGE_NAME}:latest"
+
           {
             echo "POSTGRES_USER=${ENV_POSTGRES_USER}"
             echo "POSTGRES_PASSWORD=${ENV_POSTGRES_PASSWORD}"
@@ -118,19 +122,20 @@ jobs:
             echo "GCS_BUCKET=${ENV_GCS_BUCKET}"
             echo "BQ_DATASET=${ENV_BQ_DATASET}"
             echo "BQ_TABLE=${ENV_BQ_TABLE}"
-            echo "AIRFLOW_IMAGE=${ENV_AIRFLOW_IMAGE}"
+            echo "AIRFLOW_IMAGE=${AIRFLOW_IMAGE}"
           } > .env
+
           echo "Generated local .env:"
           sed 's/^\(POSTGRES_PASSWORD=\).*/\1****/; s/^\(AIRFLOW_PASSWORD=\).*/\1****/' .env
 
       - name: Upload .env to VM
         run: |
-          ssh -i ~/.ssh/id_deploy ${VM_USER}@${VM_HOST} "mkdir -p ${VM_DEPLOY_DIR}"
-          scp -i ~/.ssh/id_deploy .env ${VM_USER}@${VM_HOST}:${VM_DEPLOY_DIR}/.env
+          ssh -i ~/.ssh/id_deploy -o StrictHostKeyChecking=no ${VM_USER}@${VM_HOST} "mkdir -p ${VM_DEPLOY_DIR}"
+          scp -i ~/.ssh/id_deploy -o StrictHostKeyChecking=no .env ${VM_USER}@${VM_HOST}:${VM_DEPLOY_DIR}/.env
 
       - name: Run deploy.sh on VM
         run: |
-          ssh -i ~/.ssh/id_deploy ${VM_USER}@${VM_HOST} "
+          ssh -i ~/.ssh/id_deploy -o StrictHostKeyChecking=no ${VM_USER}@${VM_HOST} "
             set -euo pipefail
             cd ${VM_DEPLOY_DIR}
             chmod +x ./deploy.sh || true
