--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ x-airflow-common:
   &airflow-common
   image: ${AIRFLOW_IMAGE}
   pull_policy: always
+  
   credential_spec:
-    credHelpers: "us-west1-docker.pkg.dev": gcloud
+    credHelpers:
+      "us-west1-docker.pkg.dev": gcloud
+  
   environment:
     &airflow-common-env
     PYTHONPATH: /opt/airflow
