--- a/.github/workflows/build-push-deply.yml
+++ b/.github/workflows/build-push-deply.yml
@@ -1,8 +1,8 @@
 name: Build, Push to GAR, and Deploy to VM
 
 on:
-  push:
-    branches: [ main ]
+  ##push:
+    ##branches: [ main ]
   workflow_dispatch: {}
 
 env:
