--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,13 +54,9 @@ services:
     restart: "no"
     entrypoint: /bin/bash
     command: >
-      -lc "
+      -c "
       airflow db migrate &&
-      airflow users create
-        --username $${_AIRFLOW_WWW_USER_USERNAME}
-        --password $${_AIRFLOW_WWW_USER_PASSWORD}
-        --firstname Admin --lastname User
-        --role Admin --email admin@example.com || true
+      airflow users create --username $${_AIRFLOW_WWW_USER_USERNAME} --password $${_AIRFLOW_WWW_USER_PASSWORD} --firstname Admin --lastname User --role Admin --email admin@example.com || true
       "
     depends_on:
       redis:
