--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ PGADMIN_DEFAULT_PASSWORD=admin
 AIRFLOW_USER=airflow
 AIRFLOW_PASSWORD=airflow
 AIRFLOW_UID=50000
-GCP_PROJECT_ID=ringed-almanac-464408-j7
-GCS_PROJECT_ID=ringed-almanac-464408-j7
-GCS_BUCKET=ny_taxi_data
+GCP_PROJECT_ID=spartan-lacing-477506-k1
+GCS_BUCKET=ny_taxi-spartan-lacing-477506-k1
 BQ_DATASET=ny_taxi
-BQ_TABLE=tripdata
-AIRFLOW_IMAGE=us-west1-docker.pkg.dev/ringed-almanac-464408-j7/git_actions/ny_taxi:latest
+WEBSERVER_SECRET_KEY=FqzTczO8O0pQw_yBvE5CmlGVStIouOrPjzZB7W3uEoA
+FERNET_KEY=K1iGkMK6n5Bb0cVBy8Jp3O_5gDFxmbFt3rcZrG5SOWM=
+AIRFLOW_IMAGE=us-west1-docker.pkg.dev/spartan-lacing-477506-k1/github-actions/ny_taxi
