--- a/app.ini
+++ b/app.ini
@@ -1,9 +1,9 @@
 [POSTGRES]
-TABLE_NAME = yellow_taxi_data
+TABLE_NAME = yellow_taxi
 
 [GCS]
-GCS_PROJECT_ID = ringed-almanac-464408-j7
-GCS_BUCKET = ny_taxi_data
+GCS_PROJECT_ID = spartan-lacing-477506-k1
+GCS_BUCKET = ny_taxi-spartan-lacing-477506-k1
 
 [BQ]
 BQ_DATASET = ny_taxi
@@ -11,4 +11,4 @@ BQ_TABLE = tripdata
 
 [SOURCE]
 SOURCE_BASE = https://d37ci6vzurychx.cloudfront.net/trip-data
-TAXI_TYPE = ["yellow","green","fhv"]
+TAXI_TYPE = ["yellow","green"]
