--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ psycopg2-binary==2.9.9
 google-cloud-storage==2.17.0
 google-cloud-bigquery==3.20.1
 apache-airflow-providers-google==10.21.0
+loguru==0.7.2
